# Beeline-ESP32

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  idf.sh  install.sh  partitions.csv  sdkconfig  sdkconfig.bak  sdkconfig.old
.unotes/: unotes_meta.json
WebConfig1/: index.css  template.js
components/: CMakeLists.txt  Kconfig  components.c  components.h
components/Adc/: Adc.hpp  Adc.json
components/Component/: CMakeLists.txt  Component.c  Component.h  ComponentEvent.c  ComponentEvent.h  ComponentHTTPServer.c  ComponentHTTPServer.h  ComponentQueue.c  ComponentQueue.h  ComponentREST.c  ComponentREST.h  ComponentSettings.c  ComponentSettings.h
components/ConsoleSink/: ConsoleSink.c  ConsoleSink.h  ConsoleSink.json
components/Device/: CMakeLists.txt  Device.hpp  Device.json
components/DeviceTimer/: DeviceTimer.c  DeviceTimer.h  DeviceTimer.json
components/Device_/: Device.c
components/DieTemperature/: CMakeLists.txt  DieTemperature.c  DieTemperature.h  DieTemperature.hpp  DieTemperature.json
components/ElasticSearch/: CMakeLists.txt  ElasticSearch.hpp  ElasticSearch.json
components/HTTPServer/: CMakeLists.txt  HTTPServer.hpp
components/Module/: CMakeLists.txt  Module.cpp  Module.hpp  ModuleMessage.hpp  ModuleSettings.hpp
components/Modules/: CMakeLists.txt  HttpServer.hpp  Modules.hpp  NVS.hpp
components/MqttClient/: MqttClient.hpp  MqttClient.json
main/: CMakeLists.txt  Kconfig  main.c  main.cpp
webconfig/: configure.js  functions.js  index.html  index.js  javascript.js  page.js  scan.js  style.css  template.js
(+116 files in other folders)
